k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rick-morty
  labels:
    kubernetes.io/metadata.name: rick-morty
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/enforce-version: "latest"
    pod-security.kubernetes.io/audit: "restricted"
    pod-security.kubernetes.io/audit-version: "latest"
    pod-security.kubernetes.io/warn: "restricted"
    pod-security.kubernetes.io/warn-version: "latest"
